<resources>
    <string name="app_name">iNotes</string>

    <string name="welcome_title">iNotes</string>
    <string name="signup_title_btn">Sign up</string>
    <string name="login_title_btn">Sign in</string>

    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="category">No Category</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="type_your_note">Type your note</string>
    <string name="play">Play</string>
    <string name="map">Map</string>
    <string name="image_note">Image Note</string>
</resources>